# compaction-demo

./: .dockerignore  .env.example  .gitignore  .repomixignore  ARCHITECTURE.md  Dockerfile  PLAN.md  README.md  adam.py  application.jsonl  cli.py  fly.toml  hiccup.py  import.py  import2.py  memory.py  migrate.py  patch_proto.py  pyproject.toml  rank.py  redact.py  schema.py  seed.txt  snippets.py  specter.py  sync.bb  ui.py  ui.sh  ui2.py
adam/: QUICKSTART.md  README.md  adam.py  config.json  events.jsonl  requirements.txt  test_adam.py  ui.py
adam/messages/: 1.read  all.read  hello.read
app/: __init__.py  app.py  events.py  hiccup.py  patch.py  state.py  telegram_bot.py  test_patch.py
app/js/: interactions.js  poem1.js  poem2.js  poem3.js  poem4.js
app/static/: style.css
consensual_memory/: __init__.py  llm.py  memory.py  rank.py
docs/: loop.md  security.md  signed-snippets.md  subconscious-voting.md  tree.md
event_store/: __init__.py  core.py  types.py
event_store/tests/: __init__.py  test_core.py  test_todo_app.py  todo_app.py
examples/: anthropic_example.py  basic_example.py  custom_voter.py
ideas/: declaration.md
snippets/: dark-mode-init.js  interactions.js
static/: script.js  style.css
tests/: __init__.py  test_integration.py  test_llm.py  test_memory.py  test_messaging.py  test_rank.py  test_snippet_substitution.py  test_telegram_bot.py  test_ui.py  test_vote_cache.py
tests/wally/: deps.edn
tests/wally/.cpcache/: 1750644258.basis  1851598928.basis  1851598928.cp  2850125735.basis  2850125735.cp  2850125735.manifest  3006140235.basis  3006140235.cp  3006140235.main  3006140235.manifest  3469902396.basis  3469902396.cp  3469902396.manifest  4052875295.basis  4052875295.cp
tests/wally/.wally/webdriver/data/: Local State
tests/wally/.wally/webdriver/data/Default/: Cookies  DIPS  History  Network Persistent State  Preferences  Reporting and NEL  Secure Preferences  TransportSecurity  Web Data
tests/wally/.wally/webdriver/data/Default/DawnGraphiteCache/: data_1  index
tests/wally/.wally/webdriver/data/Default/DawnWebGPUCache/: data_1  index
tests/wally/.wally/webdriver/data/Default/Extension Rules/: LOG
tests/wally/.wally/webdriver/data/Default/Extension Scripts/: LOG
tests/wally/.wally/webdriver/data/Default/Extension State/: LOG  LOG.old
tests/wally/.wally/webdriver/data/Default/GCM Store/: LOG
tests/wally/.wally/webdriver/data/Default/GPUCache/: data_1  index
tests/wally/.wally/webdriver/data/Default/Session Storage/: LOG  LOG.old
tests/wally/.wally/webdriver/data/Default/Sessions/: Session_13418277664818571  Session_13418279930123201  Tabs_13418277664863477  Tabs_13418279930477752
tests/wally/.wally/webdriver/data/Default/Site Characteristics Database/: LOG  LOG.old
tests/wally/.wally/webdriver/data/GrShaderCache/: data_1  index
tests/wally/.wally/webdriver/data/GraphiteDawnCache/: data_0  data_1  data_2  index
tests/wally/.wally/webdriver/data/ShaderCache/: data_1  index
tests/wally/.wally/webdriver/data/segmentation_platform/: ukm_db
tests/wally/src/: compaction_test.clj  ui_test.clj
tree/: todo.py
ui/: app.py
ui/static/: style.css
(+21 files in other folders)
